--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,20 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>if(Thermal)</title>
-        <link rel="stylesheet" type="text/css" href="http://localhost:4000/css/style.css">
+		<meta charset="UTF-8">
+        <title>if(Thermal)</title>
+        <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/style.css">
 	</head>
 	<body>
        <a href="https://github.com/ThermalSpan"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a> 
         <div id="header-filler"></div>
-        <img id="logo" src="http://localhost:4000/images/logo.png" alt="logo">
+        <img id="logo" src="{{ site.url }}/images/logo.png" alt="logo">
         <div id="content" class="full-div" >
             <div id="menu" class="dark-div">
                 <div id="menu-box">
                 <ul>
                     <li>
-                        <a href="http://localhost:4000">Home</a>
+                        <a href="{{ site.url }}">Home</a>
                     </li>
                     <li>
                         <a>Blog</a>
