Major changes to css, added a proper contact page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
                         <a>Blog</a>
                     </li>
                     <li>
-                        <a>Contact</a>
+                        <a href="{{site.url}}/contact/">Contact</a>
                     </li>
                     <li>
                         <a href="https://github.com/ThermalSpan?tab=repositories">
