--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,8 @@ ul {
 #post {
 font-family: Times;
 font-weight: normal;
+font-size: 18px;
+line-height: 170%;
 width: 650px;
 margin: 0 auto;
 text-align: left;
@@ -137,4 +139,13 @@ text-align: left;
      margin: 0 auto;
      list-style-type: circle;
 
+}
+
+.icon-list li {
+    display: inline;
+    padding-right: 20px;
+}
+
+#braceform {
+    font-height: 25px;
 }
